--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@grande-armee/pocket-style-guide",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Style guide for the Pocket project",
   "scripts": {
-    "prepare": "husky install",
-    "test": "exit 1"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
