--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@grande-armee/pocket-style-guide",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Style guide for the Pocket project",
+  "files": [
+    "/commitlint",
+    "/eslint",
+    "/prettier"
+  ],
   "scripts": {
     "prepare": "husky install"
   },
@@ -12,20 +17,20 @@
   "author": "Grande Armee",
   "license": "MIT",
   "peerDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.2",
+    "husky": "^7.0.4",
     "prettier": "^2.4.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "husky": "^7.0.2"
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
+    "husky": "^7.0.4"
   }
 }
