--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@grande-armee/pocket-style-guide",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Style guide for the Pocket project",
+  "author": "Grande Armee",
+  "license": "MIT",
   "files": [
     "/commitlint",
     "/eslint",
@@ -14,17 +16,17 @@
     "type": "git",
     "url": "https://github.com/Grande-Armee/pocket-style-guide"
   },
-  "author": "Grande Armee",
-  "license": "MIT",
   "peerDependencies": {
     "@commitlint/cli": "^14.1.0",
     "@commitlint/config-conventional": "^14.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "eslint": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.2.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-unicorn": "^38.0.1",
     "husky": "^7.0.4",
     "prettier": "^2.4.1"
   },
