feat: add dynamic configs

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,10 +1,12 @@
 name: Publish NPM package
+
 on:
   push:
     branches:
       - main
+
 jobs:
-  build:
+  publish-npm-package:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
